[package]
description = "Parity Ethereum JSON Deserialization"
name = "ethjson"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
ethereum-types = "0.9.2"
common-types = { path = "../ethcore/types", features = ["test-helpers"] }
parity-crypto = { version = "0.6.2", features = [ "publickey" ] }
rustc-hex = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dev-dependencies]
macros = { path = "../util/macros" }
maplit = "1.0.2"
